aggiunto costi e durate in wbs

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -59,6 +59,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Input:] idee, critiche e specifiche provenienti da un brainstorming di gruppo.
 \item[Output:] documento formale che descrive una prima versione della specifica del prodotto, nella quale si definisce dettagliatamente l'idea che si vuole realizzare.
 \item[Attività:]
+\begin{center}
 \begin{itemize}
 \item ricerca nel web di eventuali competitors per ricavare da progetti già esistenti quali funzionalità è bene riproporre, quali no e quali sono quelle innovative che bisogna sviluppare;
 \item brainstorming tra le risorse umane assegnate al WP per identificare caratteristiche da implementare nel prodotto;
@@ -67,8 +68,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:] giorni lavorativi.
+\end{center}
+\item[Costo:] 270 \euro{}.
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Definizione delle funzionalità d'uso (1.1.2)}
@@ -78,6 +80,7 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Input:] documento di specifiche di massima prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio le funzionalità base che si è deciso di sviluppare.
 \item[Attività:]
+\begin{center}
 \begin{itemize}
 \item studio del documento prodotto dal WP;
 \item analisi tecnica di sistemi simili già esistenti;
@@ -86,8 +89,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione del documento;
 \item approvazione.
 \end{itemize}
-\item[Costo:]  \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 385 \euro{}.
+\item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
 \paragraph{Analisi delle nuove tecnologie (1.1.3)}
@@ -96,7 +100,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] documento di specifiche di funzionalità prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio eventuali nuove tecnologie interessanti che potrebbero essere inserite nel progetto. Per ciascuna di queste viene riportata una stima di tempo che si presuppone sia necessario ai programmatori per arrivare ad averne una buona padronanza.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio del documento prodotto dal WP;
 \item analisi mirata di eventuali nuove tecnologie e stima delle ore per l'apprendimento;
@@ -105,8 +110,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione.
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 558 \euro{}.
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Fattibilità tecnica (1.2.1)}
@@ -115,7 +121,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] tutti i documenti prodotti dal secondo livello del WP.
 \item[Output:] documento che descrive nel dettaglio, in modo non ambiguo, la fattibilità tecnica per il prodotto che si vuole realizzare indicando le tecnologie e gli strumenti necessari per farlo.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio dei documenti prodotti dai WP;
 \item incontro fra responsabili i tecnici;
@@ -126,8 +133,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 335 \euro{}.
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Fattibilità marketing (1.2.2)}
@@ -136,7 +144,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] ricerche di mercato e dati riguardanti eventuali competitor.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista del marketing. Nel caso di una buona riuscita sono riportate anche le azioni da seguire per il rilascio del prodotto.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item analisi di mercato;
 \item interviste, sondaggi e dialoghi con possibili clienti;
@@ -146,8 +155,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 319 \euro{}
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Fattibilità legale (1.2.3)}
@@ -156,7 +166,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item definizione di un marchio;
 \item consulenza esterna legale;
@@ -165,8 +176,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 315 \euro{}.
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Fattibilità Economica (1.2.4)}
@@ -175,7 +187,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista economico. All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item consulenze economiche;
 \item stima dei costi, guadagni e gestione;
@@ -185,8 +198,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 265 \euro.
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
 \paragraph{Pianificazione qualità del prodotto (1.3.1)}
@@ -195,7 +209,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] politiche e standard di qualità, esperienze passate degli analisti.
 \item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualità al prodotto.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio degli standard esistenti;
 \item definizione degli obiettivi di qualità;
@@ -207,8 +222,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documenti;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 245 \euro{}
+\item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
 
 
@@ -218,7 +234,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all'interno del WP.
 \item[Output:] documento formale che indica gli eventuali rischi che si possono verificare durante le varie fasi di sviluppo del progetto.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item identificazione dei rischi noti;
 \item identificazione rischi dovuti alla tipologia del progetto;
@@ -228,8 +245,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 255 \euro{}.
+\item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
 \paragraph{Pianificazione del lavoro (1.3.3)}
@@ -238,15 +256,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] esperienze personali, specifiche di massima, analisi di fattibilità.
 \item[Output:] WBS,OBS,RBS, diagramma di Gantt.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item decisione del livello di profondità del WBS;
 \item definizione delle attività;
 \item identificazione dei ruoli necessari per lo svolgimento del progetto;
 \item assegnazione dei ruoli alle attività;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 525 \euro{}.
+\item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
 \paragraph{Definizione dei casi d'uso (1.4.1)}
@@ -255,7 +275,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item riunione fra gli analisti;
@@ -265,8 +286,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 445 \euro{}.
+\item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
 \paragraph{Definizione dei requisiti (1.4.2)}
@@ -275,7 +297,8 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale ad uso esterno Analisi dei Requisiti.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item riunione fra analisti;
@@ -284,8 +307,9 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 821 \euro{}.
+\item[Tempi di realizzazione:] 6 giorni lavorativi.
 \end{description}
 
 \paragraph{Progettazione di alto livello (1.4.3)}
@@ -296,7 +320,8 @@ specifica chiara, coesa e nei principi di qualità fissati a priori.
 \item[Input:] analisi dei requisiti, sistemi aziendali ed eventualmente componenti esistenti.
 \item[Output:] documento di specifica tecnica del prodotto che riassume l'architettura generale ed ad
 alto livello del software.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item incontri tra progettisti e analisti;
 \item analisi di componenti e sistemi esistenti;
@@ -305,8 +330,9 @@ alto livello del software.
 \item individuare le tecnologie e le tecniche da utilizzare;
 \item prima bozza di documenti e schemi, revisione, approvazione, formalizzazione finale.
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 976 \euro{}.
+\item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
 \paragraph{Progettazione di dettaglio (1.4.4)}
@@ -315,7 +341,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] analisi dei requisiti, specifica tecnica.
 \item[Output:] documento di definizione del prodotto che descriva con linguaggio UML2.0 schemi e diagrammi di tutte le unità che devono essere realizzate.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item definizione e specifica dei moduli da realizzare
 \item raggruppare moduli in unità mantenendo basso accoppiamento e elevata coesione
@@ -324,8 +351,9 @@ alto livello del software.
 \item stabilire i test di unità
 \item prima stesura del documento, revisione, approvazione, formalizzazione finale.
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 1405 \euro{}.
+\item[Tempi di realizzazione:] 10 giorni lavorativi.
 \end{description}
 
 \paragraph{Documentazione database (1.4.5)}
@@ -334,7 +362,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] specifica tecnica, definizione di prodotto.
 \item[Output:] documento con scopo documentale della codifica del software.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio documenti in input;
 \item stesura documentazione per ogni singola unità;
@@ -342,8 +371,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 355 \euro{}.
+\item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
 \paragraph{Realizzazione database (1.5.1)}
@@ -352,7 +382,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:]database realizzato e pienamente funzionante.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item fase di codifica;
@@ -360,8 +391,9 @@ alto livello del software.
 \item verifica della qualità;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 575 \euro{}
+\item[Tempi di realizzazione:] 5 giorni lavorativi.
 \end{description}
 
 \paragraph{Realizzazione componenti (1.5.2)}
@@ -370,7 +402,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:] codice dell'applicativo.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio dei documenti in input;
 \item fase di codifica;
@@ -378,8 +411,9 @@ alto livello del software.
 \item verifica della qualità;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 6755 \euro{}
+\item[Tempi di realizzazione:] 21 giorni lavorativi.
 \end{description}
 
 \paragraph{Test di unità (1.6.1)}
@@ -388,7 +422,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] metodi pianificati nell'architettura di dettaglio del prodotto.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio documento in input;
 \item esecuzione dei test;
@@ -399,8 +434,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 990 \euro{}.
+\item[Tempi di realizzazione:] 21 giorni lavorativi.
 \end{description}
 
 \paragraph{Test di integrazione (1.6.2)}
@@ -409,7 +445,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] componenti pianificati nella specifica tecnica del prodotto (progettazione di alto livello).
 \item[Output:] documento riassuntivo dei risultati ottenuti dalla batteria di test realizzati.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio documento in input;
 \item esecuzione dei test;
@@ -420,8 +457,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 1080 \euro{}.
+\item[Tempi di realizzazione:] 18 giorni lavorativi.
 \end{description}
 
 \paragraph{Test di sistema (1.6.3)}  
@@ -430,7 +468,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unità.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio documento Piano di Qualifica e accertamento risultati test di unità;
 \item esecuzione dei test;
@@ -441,8 +480,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 625 \euro{}.
+\item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
 \paragraph{Collaudo finale (1.6.4)}
@@ -451,7 +491,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia grafica, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio documenti in input;
 \item esecuzione di test di sistema previo utilizzo;
@@ -463,8 +504,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 315 \euro{}.
+\item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
 
 \paragraph{Manuali Utente (1.7.1)}
@@ -473,7 +515,8 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia prodotto.
 \item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item studio delle funzionalità del software;
 \item prima realizzazione manuale;
@@ -481,8 +524,9 @@ alto livello del software.
 \item formalizzazione documento;
 \item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 525 \euro{}
+\item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
 \paragraph{Assistenza e manutenzione (1.7.2)}
@@ -492,14 +536,16 @@ possibili bug del prodotto e problemi che si possono verificare con i clienti e 
 \item[Responsabile:] 
 \item[Input:] problema riguardante il software.
 \item[Output:] rilascio nuova versione, relazioni sui problemi incontrati e sulle soluzioni,
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item il servizio clienti è in contatto con il cliente per rilevare la
 soddisfazione del prodotto tramite interviste e questionari per fornire assistenza;
 \item progettisti e programmatori lavorano per risolvere eventuali problemi individuati;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 3610 \euro{}.
+\item[Tempi di realizzazione:] 47 giorni lavorativi.
 \end{description}
 
 \paragraph{Promozione del prodotto (1.8.1)}
@@ -508,13 +554,15 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 \item[Responsabile:] 
 \item[Input:] alcune conoscenze di marketing e target clienti.
 \item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item ricerca possibili clienti;
 \item pubblicità rivolta alla categorie di clienti scelti;
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 730 \euro{}.
+\item[Tempi di realizzazione:] 11 giorni lavorativi.
 \end{description}
 
 \paragraph{Presentazione del prodotto (1.8.2)}
@@ -523,11 +571,13 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 \item[Responsabile:] 
 \item[Input:] software completato.
 \item[Output:] incremento delle conoscenze del prodotto stesso e del team a possibili acquirenti e investitori. 
-\item[Attività:]
+\item[Attività:] 
+\begin{center}
 \begin{itemize}
 \item dimostrazione dell'utilità del prodotto;
 \item raccolta feedback.
 \end{itemize}
-\item[Costo:] \euro{}.
-\item[Tempi di realizzazione:]  giorni lavorativi.
+\end{center}
+\item[Costo:] 315 \euro{}.
+\item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
