--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -451,3 +451,62 @@ Vengono riportati in seguito i costi relativi ai singoli WP di primo livello:
 	  \hline
 \end{longtable}
 \end{center}
+
+\subsubsection{Altri costi}
+In questa sezione vengono riepilogati e integrati altri costi legati direttamente e indirettamente al progetto.
+
+\paragraph{Costi risorse intellettuali}
+Tabella riassuntiva degli oneri relativi alle risorse intellettuali.
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Tipologia di costo}} &
+    \multicolumn{1}{c|}{\textbf{Frequenza costo}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\
+    \hline
+		Marchi & ogni 10 anni & 4000 \tabularnewline	
+		SIAE & annuale & 261.81 \tabularnewline
+		Licenze	& annuale & 1200 \tabularnewline
+	\hline
+    \caption{Tabella costi risorse intellettuali}
+    \label{tab: Tabella costi risorse intellettuali}
+\end{longtable}
+\end{center}
+
+\paragraph{Altri costi}
+Tabella comprensiva dei costi fissi e variabili.
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}m{3cm}| >{\centering}m{3cm}| }
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Tipologia di costo}} &
+    \multicolumn{1}{c|}{\textbf{Frequenza costo}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\
+    \hline
+		Server & annuale & 1200 \tabularnewline	
+		Affitto & mensile & 400 \tabularnewline
+		Accessori hardware & annuale & 2000 \tabularnewline
+	\hline
+    \caption{Tabella riepilogativa altri costi}
+    \label{tab: Tabella riepilogativa altri costi}
+\end{longtable}
+\end{center}
+
+\subsubsection{Conclusioni}
+Tabella rappresentativa il riassunto dello stato economico del progetto.
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{5cm}| >{\centering}p{3cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Tipologia di costo}} &
+	\multicolumn{1}{c|}{\textbf{Totale (euro)}} \\
+    \hline
+		Costi attivit\`{a} & 22994  \tabularnewline	
+		Risorse intellettuali & 5461.81 \tabularnewline
+		Altri costi & 5600 \tabularnewline
+		{\textbf{Totale costi}} & {\textbf{34055,81}} \tabularnewline
+	\hline
+    \caption{Tabella riepilogativa dei costi}
+    \label{tab: Tabella riepilogativa dei costi}
+\end{longtable}
+\end{center}
+
+Il team stima nel primo anno di raggiungere almeno 500 clienti, proponendo per il prodotto dei contratti di abbonamento prevedendo una quota di 80 \euro{} annuali. Il break-even point con questi dati si raggiungerebbe gi\`{a} al primo anno.
