aggiunto assegnazione ruoli

--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -16,7 +16,7 @@ Nella tabella qui riportata si vuole presentare una stima dei costi orari suddiv
 		Responsabile Customer Care & Interna & 28 \tabularnewline 
 		Responsabile Finanziario & Esterna & 28 \tabularnewline 
 		Responsabile Legale & Esterna & 28 \tabularnewline 
-		Responsabile Marketing & Esterna & 28 \tabularnewline 
+		Responsabile Marketing & Interna & 28 \tabularnewline 
 		Responsabile Qualit\`{a} & Interna & 28 \tabularnewline 
 		Responsabile Ricerca & Interna & 28 \tabularnewline 
 		Responsabile Sviluppo & Interna & 28 \tabularnewline 
