--- a/PianoDiProgetto/sections/pianificazione.tex
+++ b/PianoDiProgetto/sections/pianificazione.tex
@@ -6,6 +6,10 @@
 \input{sections/obs}
 \newpage
 
+\subsection{Assegnazione dei ruoli}
+\input{sections/ruoli}
+\newpage
+
 \subsection{Resource Breakdown Structure}
 \input{sections/rbs}
 \newpage
