--- a/PianoDiProgetto/PianoDiProgetto.tex
+++ b/PianoDiProgetto/PianoDiProgetto.tex
@@ -46,6 +46,11 @@
 \input{sections/pianificazione}
 \newpage
 
+\section{Qualità}
+\input{sections/qualita}
+\newpage
+
+
 \section{Gestione dei rischi}
 \input{sections/rischi}
 \newpage
