Aggiunti screenshot singole milestone

--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -58,7 +58,73 @@ sommare i costi di mantenimento e hosting del servizio.
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=1\textwidth]{img/Gantt.jpg}
-\caption{Diagramma di Gantt}
-\label{fig:Diagramma di Gantt}
+\caption{Gantt Progetto}
+\label{fig:Gantt Progetto}
+\end{center}
+\end{figure}
+\newpage
+\subsubsection{Gantt Milestone}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Concept.jpg}
+\caption{Gantt Definizione Concept}
+\label{fig:Gantt Definizione Concept}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Fattibilita.jpg}
+\caption{Gantt Studio di Fattibilit\'a}
+\label{fig:Gantt Studio di Fattibilit\'a}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Pianificazione.jpg}
+\caption{Gantt Pianificazione}
+\label{fig:Gantt Pianificazione}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Analisi.jpg}
+\caption{Gantt Analisi e Progettazione}
+\label{fig:Gantt Analisi e Progettazione}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Sviluppo.jpg}
+\caption{Gantt Sviluppo}
+\label{fig:Gantt Sviluppo}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Test.jpg}
+\caption{Gantt Test}
+\label{fig:Gantt Test}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Vendita.jpg}
+\caption{Gantt Vendita}
+\label{fig:Gantt Vendita}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/G-A Commercializzazione.jpg}
+\caption{Gantt Commercializzazione}
+\label{fig:Gantt Commercializzazione}
 \end{center}
 \end{figure}
