--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -63,68 +63,146 @@ sommare i costi di mantenimento e hosting del servizio.
 \end{center}
 \end{figure}
 \newpage
+
 \subsubsection{Gantt Milestone}
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Concept.jpg}
-\caption{Gantt Definizione Concept}
-\label{fig:Gantt Definizione Concept}
-\end{center}
-\end{figure}
+\paragraph{Definizione Concept (1.1)}
 
-\begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Fattibilita.jpg}
-\caption{Gantt Studio di Fattibilit\'a}
-\label{fig:Gantt Studio di Fattibilit\'a}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Specifiche di massima & 03/06/2013 & 05/06/2013 & 3 & 270 \tabularnewline	\hline
+		Definizione delle funzionalit\`{a} d\textquoteright{}uso & 06/06/2013 & 11/06/2013 & 4 & 385 \tabularnewline \hline
+		Analisi di nuove tecnologie & 06/06/2013 & 10/06/2013 & 3 & 279 \tabularnewline
+      \hline
+\end{longtable}
 \end{center}
-\end{figure}
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Pianificazione.jpg}
-\caption{Gantt Pianificazione}
-\label{fig:Gantt Pianificazione}
-\end{center}
-\end{figure}
+\paragraph{Studio fattibilit\`{a} (1.2)}
 
-\begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Analisi.jpg}
-\caption{Gantt Analisi e Progettazione}
-\label{fig:Gantt Analisi e Progettazione}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Fattibilit\`{a} Tecnica & 12/06/2013 & 14/06/2013 & 3 & 335 \tabularnewline	\hline
+		Fattibilit\`{a} Marketing d\textquoteright{}uso & 12/06/2013 & 14/06/2013 & 3 & 319 \tabularnewline \hline
+		Fattibilit\`{a} Legale & 12/06/2013 & 14/06/2013 & 3 & 315 \tabularnewline \hline
+		Fattibilit\`{a} Economica & 12/06/2013 & 14/06/2013 & 3 & 265 \tabularnewline
+      \hline
+\end{longtable}
 \end{center}
-\end{figure}
 
-\begin{figure}[H]
+\paragraph{Pianificazione (1.3)}
 \begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Sviluppo.jpg}
-\caption{Gantt Sviluppo}
-\label{fig:Gantt Sviluppo}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Pianificazione qualit\`{a} del prodotto & 17/06/2013 & 17/06/2013 & 1 & 245 \tabularnewline \hline
+		Analisi dei rischi & 17/06/2013 & 18/06/2013 & 2 & 255 \tabularnewline \hline
+		Pianificazione del lavoro & 18/06/2013 & 21/06/2013 & 4 & 525 \tabularnewline
+      \hline
+\end{longtable}
 \end{center}
-\end{figure}
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Test.jpg}
-\caption{Gantt Test}
-\label{fig:Gantt Test}
-\end{center}
-\end{figure}
+\paragraph{Analisi e progettazione (1.4)}
 
-\begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Vendita.jpg}
-\caption{Gantt Vendita}
-\label{fig:Gantt Vendita}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Definizione dei casi d\textquoteright{}uso & 24/06/2013 & 27/06/2013 & 4 & 445 \tabularnewline \hline
+		Definizione dei requisiti & 28/06/2013 & 05/07/2013 & 6 & 821 \tabularnewline \hline
+		Progettazione ad alto livello & 15/07/2013 & 19/07/2013 & 4 & 976 \tabularnewline \hline
+		Progettazione di dettaglio & 22/07/2013 & 02/08/2013 & 10 & 1405 \tabularnewline
+      \hline
+	Documentazione database & 26/08/2013 & 27/08/2013 & 2 & 355 \tabularnewline
+      \hline
+\end{longtable}
 \end{center}
-\end{figure}
 
-\begin{figure}[H]
+\paragraph{Sviluppo (1.5)}
+
 \begin{center}
-\includegraphics[width=1\textwidth]{img/G-A Commercializzazione.jpg}
-\caption{Gantt Commercializzazione}
-\label{fig:Gantt Commercializzazione}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Realizzazione database & 28/08/2013 & 03/09/2013 & 5 & 575 \tabularnewline \hline
+		Realizzazione componenti & 04/09/2013 & 02/10/2013 & 21 & 6755 \tabularnewline \hline
+\end{longtable}
 \end{center}
-\end{figure}
+
+\paragraph{Test (1.6)}
+
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Test di unit\`{a} & 11/09/2013 & 09/10/2013 & 21 & 990 \tabularnewline \hline
+		Test di integrazione & 16/09/2013 & 11/10/2013 & 20 & 1080 \tabularnewline \hline
+Test di sistema & 14/10/2013 & 15/10/2013 & 2 & 625 \tabularnewline \hline
+Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Post vendita (1.7)}
+
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Manuali utente & 03/10/2013 & 08/10/2013 & 4 & 525 \tabularnewline \hline
+		Assistenza e Manutenzione & 28/08/2013 & 31/10/2013 & 47 & 3610 \tabularnewline \hline
+\end{longtable}
+\end{center}
+
+\paragraph{Commercializzazione (1.8)}
+
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata}} &
+    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
+      \hline
+		Promozione del prodotto & 17/10/2013 & 31/10/2013 & 11 & 730 \tabularnewline \hline
+		Assistenza e Manutenzione & 23/10/2013 & 23/10/2013 & 1 & 315 \tabularnewline \hline
+\end{longtable}
+\end{center}
